--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>FX-GO</title>
+  <meta name="Description" content="A currency converter that works online and offline">
   <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 </head>
 
