--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-80565324-3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-80565324-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'UA-80565324-3');
-</script>
+    gtag('config', 'UA-80565324-3');
+  </script>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +18,7 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>FX-GO</title>
   <meta name="Description" content="A currency converter that works online and offline">
-  <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet"> -->
 </head>
 
 <body>
